option('packager', type: 'string', value: '', description: 'Extra packager name')
option('packager_version', type: 'string', value: '', description: 'Extra packager version')
option('cli', type: 'feature', value: 'auto', description: 'Build CLI programs (“auto” means they will be built when not a subproject)')
option('static_runtime', type: 'boolean', value: false, description: 'Set to true when you want static libraries/dependencies and runtime in Rizin')
option('local', type: 'feature', value: 'auto', description: 'Adds support for local/side-by-side installation (sets rpath if needed)')
option('blob', type: 'boolean', value: false, description: 'Compile just one binary which dispatch to the right handlers based on the name used to call it')
option('subprojects_check', type: 'boolean', value: true, description: 'Check if git subprojects are up-to-date. Might be useful to disable this when developing on a different subproject version')
option('portable', type: 'boolean', value: false, description: 'Make rizin installation moveable, by using relative paths instead of absolute ones')

option('rizin_wwwroot', type: 'string', value: '', description: 'Install path for www files')
option('rizin_sdb', type: 'string', value: '', description: '')
option('rizin_zigns', type: 'string', value: '', description: 'Install path for zignatures files')
option('rizin_themes', type: 'string', value: '', description: 'Install path for themes (colors, etc.)')
option('rizin_fortunes', type: 'string', value: '', description: 'Install path for fortunes displayed when starting')
option('rizin_flags', type: 'string', value: '', description: 'Install path for flags tags')
option('rizin_hud', type: 'string', value: '', description: 'Install path for hud file (V!/)')
option('rizin_plugins', type: 'string', value: '', description: 'Path where plugins are expected to be found')
option('rizin_extras', type: 'string', value: '', description: 'Path where extras are expected to be found')
option('rizin_bindings', type: 'string', value: '', description: 'Path where rizin bindings are expected to be found')

option('rizin_version_commit', type: 'string', value: '')
option('rizin_gittip', type: 'string', value: '')
option('checks_level', type: 'integer', value: 9999, description: 'Value between 0 and 3 to enable different level of assert (see RZ_CHECKS_LEVEL). By default its value depends on buildtype (2 on debug, 1 on release).')
option('use_sys_capstone', type: 'feature', value: 'disabled')
option('use_capstone_version', type: 'combo', choices: ['v3', 'v4', 'next', 'bundled'], value: 'bundled', description: 'Specify which version of capstone to use')
option('use_sys_magic', type: 'feature', value: 'disabled')
option('use_sys_libzip', type: 'feature', value: 'disabled')
option('use_sys_libzip_openssl', type: 'boolean', value: false, description: 'Whether to use or not system openssl dependency to build libzip')
option('use_sys_zlib', type: 'feature', value: 'disabled')
option('use_sys_lz4', type: 'feature', value: 'disabled')
option('use_sys_xxhash', type: 'feature', value: 'disabled')
option('use_sys_openssl', type: 'feature', value: 'disabled')
option('use_sys_tree_sitter', type: 'feature', value: 'disabled')
option('use_sys_libuv', type: 'feature', value: 'auto', description: 'Whether to force, suggest or not use at all the system version of libuv. If system version is not found, one is built statically, unless use_libuv is false.')
option('use_libuv', type: 'boolean', value: true, description: 'If true, libuv is used to handle remote features')
option('debugger', type: 'boolean', value: true)

option('use_webui', type: 'boolean', value: false, description: 'Install different WebUIs for rizin')

option('enable_tests', type: 'boolean', value: true, description: 'Build unit tests in test/unit')
option('enable_rz_test', type: 'boolean', value: true, description: 'Build rz_test executable for regression testing')
